# model_prod

./: README.md  classifier_model.pkl  dev.ipynb  main.py  pyproject.toml  test.py
app/: app.py
config/: config.yaml
utils/: predictor.py  validator.py
